chore(collection): rename the /cards endpoint to /collection
